<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context="com.example.android.mymusicapp.MainActivity">


    <ImageView
        android:id="@+id/main_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:backgroundTint="@color/black"
        android:src="@drawable/ic_search"

        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/recommended"
        android:textColor="@color/black"
        android:textSize="@dimen/activity_text_size_20sp"

        />

    <TextView
        android:id="@+id/recommended_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_release"
        android:textSize="@dimen/activity_text_size_20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/new_release_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/activity_bar"
            android:background="@color/white">

            <TextView
                android:id="@+id/main_now_playing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:paddingLeft="@dimen/activity_padding"
                android:text="@string/now_playing"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/play_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_weight="0"
                android:paddingRight="@dimen/activity_padding"
                android:src="@drawable/ic_play_24dp"

                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/main_home"
                style="@style/ActivityStyle"
                android:backgroundTint="@color/white"
                android:drawableTop="@drawable/ic_home"
                android:text="@string/home" />

            <TextView
                android:id="@+id/main_station"
                style="@style/ActivityStyle"
                android:drawableTop="@drawable/ic_station_24dp"
                android:text="@string/category_station" />

            <TextView
                android:id="@+id/main_library"
                style="@style/ActivityStyle"
                android:drawableTop="@drawable/ic_library"
                android:text="@string/library" />


        </LinearLayout>
    </RelativeLayout>


</LinearLayout>
