<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context="com.example.android.mymusicapp.StationsActivity">

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/stations_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:dividerHeight="1dp"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/activity_bar"
        android:background="@color/white">

        <TextView
            android:id="@+id/station_now_playing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:paddingLeft="@dimen/activity_padding"
            android:text="@string/now_playing" />

        <ImageView
            android:id="@+id/play_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_weight="0"
            android:paddingRight="@dimen/activity_padding"
            android:src="@drawable/ic_play_24dp"

            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/station_activity_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/station_home"
            style="@style/ActivityStyle"
            android:backgroundTint="@color/black"
            android:drawableTop="@drawable/ic_home"
            android:text="@string/home" />

        <TextView
            android:id="@+id/station_station"
            style="@style/ActivityStyle"
            android:backgroundTint="@color/black"
            android:drawableTop="@drawable/ic_station_24dp"
            android:text="@string/category_station" />

        <TextView
            android:id="@+id/station_library"
            style="@style/ActivityStyle"
            android:backgroundTint="@color/black"
            android:drawableTop="@drawable/ic_library"
            android:text="@string/library" />


    </LinearLayout>
</LinearLayout>