<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/now_playing_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    android:weightSum="2">

    <TextView
        android:id="@+id/now_playing_name"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_gravity="center_horizontal"
        android:layout_weight=".4"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/activity_text_size_20sp" />

    <ImageView
        android:id="@+id/now_playing_image"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight=".8"

        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight=".5"
        android:orientation="horizontal"

        >

        <TextView

            style="@style/ActivityStyle"
            android:layout_gravity="center_vertical"
            android:background="@color/white"
            android:drawableTop="@drawable/ic_skip_previous_black_24dp" />

        <TextView

            style="@style/ActivityStyle"
            android:layout_gravity="center_vertical"
            android:background="@color/white"
            android:drawableTop="@drawable/ic_pause_black_24dp" />

        <TextView

            style="@style/ActivityStyle"
            android:layout_gravity="center_vertical"
            android:background="@color/white"
            android:drawableTop="@drawable/ic_skip_next_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight=".6"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/now_playing_home"
            style="@style/ActivityStyle"
            android:backgroundTint="@color/black"
            android:drawableTop="@drawable/ic_home"
            android:text="@string/home" />

        <TextView
            android:id="@+id/now_playing_station"
            style="@style/ActivityStyle"
            android:backgroundTint="@color/black"
            android:drawableTop="@drawable/ic_station_24dp"
            android:text="@string/category_station" />

        <TextView
            android:id="@+id/now_playing_library"
            style="@style/ActivityStyle"
            android:backgroundTint="@color/black"
            android:drawableTop="@drawable/ic_library"
            android:text="@string/library" />


    </LinearLayout>


</LinearLayout>
